Fixed image alignment

--- a/modules/project-card/project-card.css
+++ b/modules/project-card/project-card.css
@@ -55,6 +55,10 @@ project-card .project-image  {
 		margin-right: 20px;
 	}
 
+	project-card .project-images {
+		margin-bottom: 20px;
+	}
+
 	picture.project-image {
 		display: block;
 		max-width: 250px;
@@ -80,16 +84,19 @@ project-card .project-image  {
 		flex-direction: row;
 		justify-content: space-between;
 		margin-right: 20px;
+		align-items: center;
 	}
 
 	project-card .project-details {
 		max-width: 50%;
 		margin-right: 5px;
+		margin-top: 10px;
 	}
 
 	project-card .project-images {
 		max-width: 50%;
-		margin-top: 5px;
+		margin-right: 10px;
+		margin-top: 10px;
 	}
 }
 
